# pattern-finder

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml
.claude/: settings.json
backtester/: Dockerfile  main.py  optimize_wickplay.py  pyproject.toml  scan_cli.py  streamlit_app.py  sweep_result_trendline.json  sweep_wickplay.py  sweep_wickplay_exit.py
backtester/alembic/: env.py
backtester/alembic/versions/: 342a92059b5f_create_buy_signals_table.py  91ee001dc7dd_add_interval_and_signal_datetime_to_buy_.py
backtester/backtest/adapters/: engine.py
backtester/backtest/domain/: models.py  ports.py
backtester/backtest/models/: result.py  trade.py
backtester/db/: base.py  session.py
backtester/pages/: 10_Wedge_Pop_Strategy_15m.py  11_Wick_Play_Strategy_15m.py  12_Multi_Wick_Play_15m.py  13_Fair_Value_Gap.py  14_Multi_Fair_Value_Gap.py  1_Pattern_Detection.py  2_Backtest_Results.py  3_Multi_Wedgepop.py  4_Buy_Signals.py  4_Multi_Wedgepop_Signals.py  5_Wick_Play_Strategy.py  6_Multi_Wick_Play.py  7_Multi_Wick_Play_Signals.py  8_Multi_Wedgepop_15m.py  strategy.py
backtester/tests/: conftest.py  test_engine.py  test_fair_value_gap.py  test_fixed_r_exits.py  test_krx_universe.py  test_market_calendar.py  test_market_data_interval.py  test_multi_fair_value_gap_strategy.py  test_multi_wedgepop_strategy.py  test_nasdaq_trader_universe.py  test_plotly_charts_intraday.py  test_regular_session_filter.py  test_reversal_extension.py  test_sessions.py  test_signal_interval.py  test_strategy.py  test_wedge_pop.py  test_wedgepop_15m_strategy.py  test_wedgepop_strategy.py  test_wick_play_regime.py  test_wick_play_scanner.py  test_wickplay_15m_strategy.py
(+52 files in other folders)
