[project]
name = "backtester"
version = "0.1.0"
description = "TraderLion pattern backtesting system"
requires-python = ">=3.14"
dependencies = [
    # web framework
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    # data
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    # technical analysis
    "ta>=0.11.0",
    # visualization
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
